--- a/index.html
+++ b/index.html
@@ -11,23 +11,29 @@
 
 <body>
     <div id="app">
+
+        <!-- Titolo dell'esercizio -->
+        <h1>Carosello in Vue</h1>
+
+
+
         <div class="container">
             <div class="slider-wrapper" tabindex="0">
+                <button class="bottone-sopra left-btn">&uarr;</button> <!-- Bottone - Indietro -->
+                
                 <div class="item">
                     <img src="img/01.webp" alt="Spiderman" />
                     <div class="text">
                         <h3>Spiderman</h3>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit
-                            tempore aliquid deleniti aut
-                            veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum
-                            corporis.
-                        </p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit
+                            tempore aliquid deleniti aut veniam inventore eligendi ex ad ullam, cumque provident totam
+                            omnis, magnam dolores dolorum corporis.</p>
                     </div>
                 </div>
+                
+                <button class="bottone-sotto right-btn">&darr;</button> <!-- Bottone - Avanti -->
             </div>
         </div>
-
     </div>
 
     <script src='https://unpkg.com/vue@3/dist/vue.global.js'></script>
